Bug 566869 - prefapi.h does not like Chromium's prtypes.h. r=bsmedberg